added more content to docs

--- a/apps/docs/how-it-works.mdx
+++ b/apps/docs/how-it-works.mdx
@@ -45,7 +45,7 @@ Ready to streamline your affiliate marketing workflow? Here's how to get started
   <Card title="Sign Up" icon="user-plus" href="https://www.affeasy.link">
     Create your AffEasy account at www.affeasy.link
   </Card>
-  <Card title="Connect Networks" icon="network-wired" href="/quickstart">
+  <Card title="Connect Networks" icon="plug" href="/quickstart">
     Follow our quickstart guide to connect your first affiliate network
   </Card>
 </CardGroup>
