--- a/apps/docs/introduction.mdx
+++ b/apps/docs/introduction.mdx
@@ -59,7 +59,11 @@ To get started with AffEasy, you can do any of the following:
   <Card title="Quickstart Guide" icon="heart" href="/quickstart">
     Follow our quickstart guide to get started with AffEasy
   </Card>
-  <Card title="Try our API" icon="code" href="/api-reference/introduction">
-    Learn how to use Dub's API to create and manage links programmatically
+  <Card
+    title="Connect an Affiliate Network"
+    icon="plug"
+    href="/quickstart/affiliate-networks/introduction"
+  >
+    Learn how to connect and affiliate network to AffEasy
   </Card>
 </CardGroup>
