--- a/apps/docs/quickstart/affiliate-networks/commision-junction.mdx
+++ b/apps/docs/quickstart/affiliate-networks/commision-junction.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Commission Junction (CJ)"
 description: "This guide will walk you through the process of connecting your Commission Junction (CJ) account to AffEasy, streamlining your affiliate marketing workflow."
-icon: link
+icon: arrow-trend-up
 ---
 
 ## 1. Prerequisites
