--- a/apps/docs/quickstart/affiliate-networks/introduction.mdx
+++ b/apps/docs/quickstart/affiliate-networks/introduction.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Introduction"
 description: "Learn how to connect an affiliate network to AffEasy"
-icon: network-wired
+icon: plug
 ---
 
 Connecting an affiliate network allows you to create affiliate links for brands that you have partnered with through that affiliate network. For example, if you have a partnership with Nike through Commission Junction (CJ), connecting your CJ account will allow you to create an affiliate link for Nike.
