--- a/apps/docs/quickstart/guide.mdx
+++ b/apps/docs/quickstart/guide.mdx
@@ -5,15 +5,20 @@ description: "Learn how to create an affiliate link using AffEasy"
 icon: play
 ---
 
-import Prerequisites from "/snippets/sdk-prerequisites.mdx";
+## Prerequisites
 
-<Prerequisites />
+<AccordionGroup>
+  <Accordion title="An AffEasy account">
+    If you haven't already, [create an account](https://app.affeasy.link) to get
+    started.
+  </Accordion>
+</AccordionGroup>
 
-## 2. Add an Affiliate Network
+## Step 1. Add an Affiliate Network
 
 Connect an affiliate network to your AffEasy account by following [this](/guickstart/connect-affiliate-network) guide.
 
-## 3. Open the Link Builder
+## Step 2. Open the Link Builder
 
 There are 3 ways to open the link builder to create an affiliate link:
 
@@ -33,11 +38,11 @@ There are 3 ways to open the link builder to create an affiliate link:
 
 You’ll also see a preview of how your short link will appear on platforms like X (formerly Twitter), Facebook, and LinkedIn.
 
-## 4. Enter Your Destination URL
+## Step 3. Enter Your Destination URL
 
 Type the URL in the "Destination URL" field. You can include or leave out the `https://` – AffEasy will format it correctly for you.
 
-## 5. Set a Short Link Slug
+## Step 4. Set a Short Link Slug
 
 In the Short Link field, you can:
 
@@ -56,11 +61,11 @@ This step is optional. If you skip it, AffEasy will generate a slug for you.
   />
 </Frame>
 
-## 6. Customize Your Link Previews
+## Step 5. Customize Your Link Previews
 
 You can control how your links appear on social media by setting custom social media cards. This is optional and works for platforms like X, LinkedIn, Slack, Telegram, iMessage, and more.
 
-## 7. Add Tags to Your Link
+## Step 6. Add Tags to Your Link
 
 You can add tags to organize your links and make them easier to find.
 
@@ -77,7 +82,7 @@ You can add tags to organize your links and make them easier to find.
   />
 </Frame>
 
-## 8. You’re Done!
+## Step 7. You’re Done!
 
 Click "Create link," and AffEasy will do its magic. It will identify the store or brand from your URL and use your affiliate network connections to create an affiliate link for you. Congrats! You’ve created your first link on AffEasy.
 
