--- a/apps/docs/quickstart/affiliate-networks/amazon.mdx
+++ b/apps/docs/quickstart/affiliate-networks/amazon.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Amazon"
 description: "This guide will walk you through the process of connecting your Amazon Affiliate account to AffEasy, streamlining your affiliate marketing workflow."
-icon: link
+icon: arrow-trend-up
 ---
 
 ## 1. Prerequisites
