--- a/apps/docs/quickstart/affiliate-networks/rakuten.mdx
+++ b/apps/docs/quickstart/affiliate-networks/rakuten.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Rakuten Advertising"
 description: "This guide will walk you through the process of connecting your Rakuten Advertising Publisher account to AffEasy, streamlining your affiliate marketing workflow."
-icon: link
+icon: arrow-trend-up
 ---
 
 ## 1. Prerequisites
