add workspace id article

--- a/apps/docs/domains/cloudflare-domains.mdx
+++ b/apps/docs/domains/cloudflare-domains.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Using Cloudflare Domains with AffEasy"
+title: "Use a Cloudflare Domain"
 "og:title": "How to Use Cloudflare Domains with AffEasy"
 description: "Learn how to properly configure Cloudflare domains for your AffEasy workspace"
 icon: cloud
