added more docs

--- a/apps/docs/workspace/what-is-a-workspace.mdx
+++ b/apps/docs/workspace/what-is-a-workspace.mdx
@@ -5,23 +5,32 @@ description: "Learn about Workspaces on AffEasy and how to use them to organize 
 icon: briefcase
 ---
 
-# What is a "Workspace" on AffEasy?
+On AffEasy, a "Workspace" is a dedicated organizational unit designed to help you efficiently manage and categorize your affiliate marketing efforts. Here's what you need to know:
 
-Learn more about what a "Workspace" is on AffEasy and how you can use it to organize your affiliate links.
+## Definition and Purpose
 
-Last updated: September 5, 2024
+- A Workspace is a centralized hub where you can store, manage, and track all the affiliate short links related to a specific project, website, or business venture.
+- It serves as a container for your affiliate marketing activities, allowing you to keep different aspects of your business separate and organized.
 
-## Understanding Workspaces
+## Practical Application
 
-On AffEasy, a "Workspace" is a dedicated space where you can store and manage all the affiliate short links for your website, app, or business.
+For instance, if you're managing multiple affiliate websites or campaigns, you can create a separate workspace for each:
 
-You can think of an AffEasy workspace as a "Team" or an "Organization" where you can **invite your teammates** to collaborate and manage the links together.
+- Workspace 1: Tech Gadget Review Blog
+- Workspace 2: Fitness Equipment Affiliate Site
+- Workspace 3: Travel Deals Comparison Platform
+
+This separation allows you to:
+
+- Keep analytics and performance metrics distinct for each project
+- Customize settings and domains specific to each venture
+- Manage team access and permissions on a per-project basis
 
 ## How to Create a Workspace
 
 To create a workspace:
 
-1. Go to the **AffEasy Dashboard**
+1. Go to your [AffEasy dashboard](https://app.affeasy.link/)
 2. Click on the **Create workspace** button
 
 <Frame>
@@ -29,8 +38,8 @@ To create a workspace:
     className="rounded-lg border border-gray-100"
     src="/images/workspace/create-workspace-modal.png"
     alt="The workspace creation modal on AffEasy"
-    width="800"
-    height="400"
+    width="300"
+    height="150"
   />
 </Frame>
 
@@ -50,8 +59,8 @@ After creating your workspace, you'll be redirected to the workspace dashboard. 
     className="rounded-lg border border-gray-100"
     src="/images/workspace/onboarding-checklist.png"
     alt="Onboarding checklist for a new workspace in AffEasy"
-    width="800"
-    height="400"
+    width="1200"
+    height="630"
   />
 </Frame>
 
@@ -75,8 +84,8 @@ If your workspace has multiple domains, you can filter links by their respective
     className="rounded-lg border border-gray-100"
     src="/images/workspace/domain-filtering.png"
     alt="Filtering links by domain in AffEasy"
-    width="800"
-    height="300"
+    width="1200"
+    height="630"
   />
 </Frame>
 
