added some more pages

--- a/apps/docs/workspace/what-is-a-workspace.mdx
+++ b/apps/docs/workspace/what-is-a-workspace.mdx
@@ -5,7 +5,7 @@ description: "Learn about Workspaces on AffEasy and how to use them to organize 
 icon: briefcase
 ---
 
-On AffEasy, a "Workspace" is a dedicated organizational unit designed to help you efficiently manage and categorize your affiliate marketing efforts. Here's what you need to know:
+On AffEasy, a "Workspace" is a dedicated organizational unit designed to help you efficiently manage and categorize your affiliate marketing efforts. Here's what you need to know.
 
 ## Definition and Purpose
 
@@ -64,30 +64,19 @@ After creating your workspace, you'll be redirected to the workspace dashboard. 
   />
 </Frame>
 
-1. **Configure your custom domain**: Set up your own domain for your affiliate short links.
-2. **Create or import your links**: Add new affiliate links or import existing ones to your workspace.
+1. **Configure your custom domain**: [Set up your own domain](/domains/add-custom-domain) for your affiliate short links.
+2. **Create or import your links**: [Create a new affiliate link](/quickstart/guide) or import existing ones to your workspace.
 3. **Invite your teammates**: Collaborate by inviting team members to join your workspace.
 
 ## Custom Domains in Workspaces
 
-AffEasy allows you to add custom domains to your workspace. The number of domains you can add depends on your plan:
+AffEasy allows you to [add custom domains](/domains/add-custom-domain) to your workspace. The number of domains you can add depends on your [plan](https://affeasy.link/pricing):
 
 - **Free plan**: 3 domains
 - **Pro plan**: 10 domains
 - **Business plan**: 40 domains
-- **Enterprise plan**: Unlimited domains
 
-If your workspace has multiple domains, you can filter links by their respective domains:
-
-<Frame>
-  <img
-    className="rounded-lg border border-gray-100"
-    src="/images/workspace/domain-filtering.png"
-    alt="Filtering links by domain in AffEasy"
-    width="1200"
-    height="630"
-  />
-</Frame>
+If your workspace has multiple domains, you can filter links by their respective domains.
 
 ## Limits and Billing for Workspaces
 
