fixed pro and business plans

--- a/apps/docs/domains/add-custom-domain.mdx
+++ b/apps/docs/domains/add-custom-domain.mdx
@@ -1,5 +1,5 @@
 ---
-title: "How to add a custom domain"
+title: "Add a custom domain"
 "og:title": "How to add a custom domain to AffEasy"
 description: "Learn how to add a custom domain to your AffEasy workspace for free - no credit card required."
 icon: globe
