--- a/apps/docs/plans/business-plan.mdx
+++ b/apps/docs/plans/business-plan.mdx
@@ -5,19 +5,13 @@ description: "Learn about the AffEasy Business plan, its features, and how it ca
 icon: briefcase
 ---
 
-# AffEasy Business Plan
-
-Learn more about the AffEasy Business plan and its features to scale your affiliate marketing operations.
-
-Last updated: September 5, 2024
-
 ## Pro Plan Features
 
-AffEasy offers one of the most powerful introductory paid plans in the industry – our **Pro plan**.
+AffEasy offers one of the most powerful introductory paid plans in the industry – our [**Pro plan**](/plans/pro-plan).
 
 With our Pro plan, you can:
 
-- Create up to 1,000 **links** a month with your own **custom domains**
+- Create up to 1,000 links a month with your own [**custom domains**](/domains/add-custom-domain)
 - Update link destinations unlimited times
 - Get **in-depth analytics** on your links' performance for up to 50,000 clicks a month
 
@@ -27,7 +21,7 @@ However, as your usage grows, you may want to upgrade to the AffEasy Business Pl
 
 Subscribing to AffEasy Business unlocks benefits such as more links, more tracked clicks, extended analytics retention period, and more.
 
-Here's how AffEasy Business compares to the **Pro** & free plans:
+Here's how AffEasy Business compares to the [Pro](/plans/pro-plan) & free plans:
 
 | Features                  | Free    | Pro    | Business |
 | ------------------------- | ------- | ------ | -------- |
@@ -45,37 +39,23 @@ You can check out the full pricing comparison on our [pricing page](https://affe
 
 ## How much does AffEasy Business cost?
 
-AffEasy's basic Business plan is priced at $59 per month – or $49 per month if billed annually.
-
-As you scale your affiliate marketing operations, we also offer additional Business tiers with higher usage limits for links, tracked clicks, and other features.
-
-Here's a quick overview of the different Business tiers:
-
-| Features          | Business (Basic) | Business Plus | Business Extra | Business Max |
-| ----------------- | ---------------- | ------------- | -------------- | ------------ |
-| Monthly Price     | $59/mo           | $119/mo       | $249/mo        | $499/mo      |
-| Yearly Price      | $49/mo           | $99/mo        | $199/mo        | $399/mo      |
-| Links/mo          | 5,000            | 15,000        | 40,000         | 100,000      |
-| Tracked clicks/mo | 150K             | 400K          | 1M             | 2.5M         |
-| Custom domains    | 40               | 100           | 250            | 500          |
-| Teammates         | 15               | 40            | 100            | 250          |
-| Tags              | 150              | 300           | 500            | 1,000        |
+AffEasy's basic Business plan is priced at `$49.99` per month – or `$39.99` per month if billed annually.
 
 ## How to upgrade to Business?
 
 To upgrade to AffEasy Business, follow these steps:
 
-1. First, **create a workspace** if you haven't already.
+1. First, [**create a workspace**](/workspace/what-is-a-workspace) if you haven't already.
 2. Navigate to your workspace page.
 3. Click on the **Upgrade** button in the top menu bar.
 
 <Frame>
   <img
     className="rounded-lg border border-gray-100"
-    src="/images/pricing/upgrade-button.png"
+    src="/images/plans/upgrade-button.png"
     alt="Upgrade button in the top menu bar"
-    width="800"
-    height="100"
+    width="1200"
+    height="630"
   />
 </Frame>
 
@@ -84,10 +64,10 @@ To upgrade to AffEasy Business, follow these steps:
 <Frame>
   <img
     className="rounded-lg border border-gray-100"
-    src="/images/pricing/upgrade-business-modal.png"
+    src="/images/plans/upgrade-business-modal.png"
     alt="Upgrade to Business modal"
-    width="800"
-    height="400"
+    width="300"
+    height="150"
   />
 </Frame>
 
@@ -98,10 +78,10 @@ To upgrade to AffEasy Business, follow these steps:
 <Frame>
   <img
     className="rounded-lg border border-gray-100"
-    src="/images/pricing/business-badge.png"
+    src="/images/plans/business-badge.png"
     alt="AffEasy Business badge on the top menu bar"
-    width="800"
-    height="100"
+    width="1200"
+    height="630"
   />
 </Frame>
 
