--- a/apps/docs/plans/pro-plan.mdx
+++ b/apps/docs/plans/pro-plan.mdx
@@ -13,11 +13,11 @@ AffEasy offers one of the most generous free plans in the affiliate link managem
 - Update link destinations unlimited times
 - Access **in-depth analytics** on your links' performance (including geolocation, device, browser, and referrer information)
 
-However, as your affiliate marketing efforts grow, you may want to upgrade to the AffEasy Pro Plan to unlock more features and benefits.
+However, as your affiliate marketing efforts grow, you may want to [upgrade to the AffEasy Pro Plan](https://affeasy.link/pricing) to unlock more features and benefits.
 
 ## Benefits of the Pro Plan
 
-Subscribing to AffEasy Pro unlocks benefits such as more tracked clicks, **root domain redirect**, **custom QR codes**, and more.
+Subscribing to AffEasy Pro unlocks benefits such as more tracked clicks, [root domain redirect](/features/how-to-redirect-root-domain), [custom QR codes](/features/custom-qr-codes), and more.
 
 Here's how AffEasy Pro compares to the free tier:
 
@@ -37,23 +37,23 @@ You can check out the full pricing comparison on our [pricing page](https://affe
 
 ## How much does AffEasy Pro cost?
 
-AffEasy Pro is priced at $24 per month or $19 per month if billed annually.
+AffEasy Pro is priced at `$19.99` per month or `$14.99` per month if billed annually.
 
 ## How to upgrade to Pro?
 
 To upgrade to AffEasy Pro, follow these steps:
 
-1. First, **create a workspace** if you haven't already.
+1. First, [**create a workspace**](/workspace/what-is-a-workspace) if you haven't already.
 2. Navigate to your workspace page.
 3. Click on the **Upgrade** button in the top menu bar.
 
 <Frame>
   <img
     className="rounded-lg border border-gray-100"
-    src="/images/pricing/upgrade-button.png"
+    src="/images/plans/upgrade-button.png"
     alt="Upgrade button in the top menu bar"
-    width="800"
-    height="100"
+    width="1200"
+    height="630"
   />
 </Frame>
 
@@ -62,10 +62,10 @@ To upgrade to AffEasy Pro, follow these steps:
 <Frame>
   <img
     className="rounded-lg border border-gray-100"
-    src="/images/pricing/upgrade-modal.png"
+    src="/images/plans/upgrade-modal.png"
     alt="Upgrade to Pro modal"
-    width="800"
-    height="400"
+    width="300"
+    height="150"
   />
 </Frame>
 
@@ -76,10 +76,10 @@ To upgrade to AffEasy Pro, follow these steps:
 <Frame>
   <img
     className="rounded-lg border border-gray-100"
-    src="/images/pricing/pro-badge.png"
-    alt="AffEasy Pro badge on the top menu bar"
-    width="800"
-    height="100"
+    src="/images/plans/pro-badge.png"
+    alt="AffEasy pro badge in the top menu bar"
+    width="1200"
+    height="630"
   />
 </Frame>
 
