added some more pages

--- a/apps/docs/features/how-to-redirect-root-domain.mdx
+++ b/apps/docs/features/how-to-redirect-root-domain.mdx
@@ -60,9 +60,9 @@ To redirect your domain to a URL of your choice, follow these steps:
 
 AffEasy offers a variety of advanced link features that you can use to enhance your root domain links:
 
-1. **Custom Social Media Cards**: Customize your social media cards to make your links more engaging. [Learn more](/features/social-cards).
+1. **Custom Social Media Cards**: Customize your social media cards to make your links more engaging. [Learn more](/features/custom-social-media-cards).
 
-2. **Tags**: Assign tags to your links to organize them. [Learn more](/features/tags).
+2. **Tags**: Assign tags to your links to organize them. [Learn more](/features/how-to-use-tags).
 
 3. **UTM Builder**: Add UTM parameters to your links. [Learn more](/features/utm-builder).
 
