some more changes

--- a/apps/docs/features/password-protected-links.mdx
+++ b/apps/docs/features/password-protected-links.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Password Protection"
+title: "Password Protected Links"
 "og:title": "Using Tags to Organize Links on AffEasy"
 description: "Learn more about what a 'Tag' is and how you can use it to better manage your links on AffEasy."
 icon: tag
