--- a/apps/docs/introduction.mdx
+++ b/apps/docs/introduction.mdx
@@ -56,7 +56,7 @@ The easiest way to quickly try the app is to signup on
 To get started with AffEasy, you can do any of the following:
 
 <CardGroup cols={2}>
-  <Card title="Quickstart Guide" icon="heart" href="/quickstart">
+  <Card title="Quickstart Guide" icon="heart" href="/quickstart/guide">
     Follow our quickstart guide to get started with AffEasy
   </Card>
   <Card
