--- a/apps/docs/features/geo-targeting.mdx
+++ b/apps/docs/features/geo-targeting.mdx
@@ -1,173 +1,106 @@
 ---
 title: "Geo Targeting"
-"og:title": "Using Tags to Organize Links on AffEasy"
-description: "Learn more about what a 'Tag' is and how you can use it to better manage your links on AffEasy."
-icon: tag
+"og:title": "Mastering Geo Targeting on AffEasy"
+description: "Learn how to use geo targeting on AffEasy to redirect your users to different links based on their location."
+icon: globe
 ---
 
-Tags are a powerful way to organize your links on AffEasy. You can use tags to group links together and make it easier to find them later.
+AffEasy's geo targeting feature allows you to redirect users to different links based on their geographical location, enabling powerful location-based personalization for your marketing campaigns.
+
+<Note>This feature is only available for **Pro plans and above**.</Note>
+
+## Why use geo targeting?
+
+Geo targeting is an invaluable tool for businesses operating in multiple regions or countries. It allows you to:
+
+- Provide localized content or offers
+- Redirect users to region-specific landing pages
+- Comply with regional regulations or restrictions
+- Optimize user experience based on location
+
+## How to set up geo targeting
+
+To use geo targeting for your AffEasy links, follow these steps:
+
+1. Open the **link builder** in your AffEasy dashboard.
+2. Set your main **Destination URL** (this will be used as a fallback for non-targeted locations).
+3. Toggle the "Geo Targeting" switch to reveal targeting options.
+4. For each location you want to target:
+   a. Select the **Country** from the dropdown menu.
+   b. Enter the **URL** for that specific country.
+5. Click "Add location" to target additional countries.
+6. Once you've added all desired locations, click "Create Link" to generate your geo-targeted link.
 
 <Frame>
   <img
     className="rounded-lg border border-gray-100"
-    src="/images/tags/tags-overview.png"
-    alt="Using tags to organize links on AffEasy"
+    src="/images/geo-targeting/geo-targeting-builder.png"
+    alt="Geo targeting options in the AffEasy link builder"
     width="600"
     height="400"
   />
 </Frame>
 
-## What is a Tag?
+## How geo targeting works
 
-A tag is a label that you can assign to a link. Tags are color-coded and can be created and assigned to a link in just a few clicks.
+When a user clicks on your AffEasy link with geo targeting enabled:
 
-With tags, you can:
+1. AffEasy detects the user's location based on their IP address.
+2. If the user's country matches one of your specified locations, they are redirected to the corresponding URL.
+3. If there's no match, or if the user's location can't be determined, they are sent to the main Destination URL.
 
-1. Organize your links by campaigns, clients, or any other categories you can think of.
-2. Filter your links by tags and get a shareable link to the filtered results.
-3. **Filter your analytics by tags** to see how your campaigns are performing.
+## Advanced geo targeting with AI
 
-## How to create a Tag
+AffEasy offers an AI-powered solution to enhance your geo targeting strategy. By clicking the `✨` button in the link builder, you can access **AffEasy AI**, which analyzes global traffic patterns and suggests optimal geo targeting settings based on your link's content and target audience.
 
-To create a tag, follow these steps:
+## Using geo targeting with the AffEasy API
 
-1. Navigate to the **Tags settings page** in your AffEasy workspace.
+For developers and advanced users, AffEasy provides API access to create geo-targeted links programmatically. To create a geo-targeted link using the API, include a `geo` field in your link creation request. The `geo` field should be an object with valid country codes as keys and their respective URLs as values.
 
-<Frame>
-  <img
-    className="rounded-lg border border-gray-100"
-    src="/images/tags/tags-settings-page.png"
-    alt="Tags settings page"
-    width="600"
-    height="400"
-  />
-</Frame>
+Here's an example of how to create a geo-targeted link using the AffEasy API:
 
-2. Click on the "Create Tag" button to open the tag creation modal.
-3. Enter a name for your tag and choose a color.
+```typescript
+import { AffEasy } from "affeasy";
 
-<Frame>
-  <img
-    className="rounded-lg border border-gray-100"
-    src="/images/tags/tag-creation-modal.png"
-    alt="Tag creation modal"
-    width="400"
-    height="300"
-  />
-</Frame>
+const affeasy = new AffEasy();
 
-You can also create new tags directly inside the **AffEasy link builder**:
+await affeasy.links.create({
+  url: "https://example.com", // fallback URL
+  geo: {
+    US: "https://example.com/us",
+    GB: "https://example.com/uk",
+    DE: "https://example.com/de",
+  },
+});
+```
 
-1. After **creating a link**, click on the tag input field.
-2. Type in the name of the tag you want to create.
-3. If the tag doesn't exist, press `Enter ↩` to create a new tag.
+<Note>
+  Make sure to use valid [ISO 3166-1
+  alpha-2](https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2) country codes as
+  keys in the `geo` object.
+</Note>
 
-<Frame>
-  <img
-    className="rounded-lg border border-gray-100"
-    src="/images/tags/create-tag-in-builder.png"
-    alt="Input the name of the tag you want to create (e.g. 'New Tag')"
-    width="500"
-    height="100"
-  />
-</Frame>
+## Combining geo targeting with device targeting
 
-4. Click on the "Create Link" button to assign the tag to the link.
+For even more precise link customization, you can combine geo targeting with AffEasy's device targeting feature. This allows you to create links that direct users to different URLs based on both their geographical location and device type.
 
-## How to edit or delete a Tag
+To set up combined geo and device targeting:
 
-Tags can be managed via the **Tags settings page** in your AffEasy workspace.
+1. Enable geo targeting as described above.
+2. In the link builder, also enable the "Device Targeting" option.
+3. Set up your device targeting rules for different device types.
+4. AffEasy will first check the user's location, then apply any relevant device targeting rules.
 
-<Frame>
-  <img
-    className="rounded-lg border border-gray-100"
-    src="/images/tags/edit-tags-page.png"
-    alt="Editing tags in the Tags settings page"
-    width="600"
-    height="400"
-  />
-</Frame>
+## Measuring the impact of geo targeting
 
-To manage a tag:
+AffEasy provides detailed analytics to help you measure the effectiveness of your geo targeting strategy. In your dashboard, you can view:
 
-1. Click on the `⋮` button next to the tag to open the menu popover.
-2. Choose from the following options:
-   - Edit the tag
-   - Copy the tag's unique ID (for **programmatic API use**)
-   - Delete the tag
+- Click-through rates for each targeted location
+- Conversion rates for geo-targeted vs. non-targeted links
+- Geographic distribution of clicks
 
-<Frame>
-  <img
-    className="rounded-lg border border-gray-100"
-    src="/images/tags/tag-menu-popover.png"
-    alt="Edit a tag by clicking on the ⋮ icon"
-    width="300"
-    height="200"
-  />
-</Frame>
-
-You can also use the following keyboard shortcuts to manage your tags:
-
-| Keyboard Shortcut | Action                   |
-| ----------------- | ------------------------ |
-| `E`               | Edit a tag               |
-| `I`               | Copy the tag's unique ID |
-| `X`               | Delete a tag             |
-
-To edit a tag:
-
-1. Click on the "Edit" button in the tag menu popover.
-2. In the tag editing modal, you can:
-   - Rename the tag
-   - Change the color of the tag
-
-<Frame>
-  <img
-    className="rounded-lg border border-gray-100"
-    src="/images/tags/tag-editing-modal.png"
-    alt="Tag editing modal"
-    width="400"
-    height="300"
-  />
-</Frame>
-
-## Can I assign multiple tags to a link?
-
-Yes, you can. In the tags section for a given link, you can select multiple tags to assign to the link.
-
-<Frame>
-  <img
-    className="rounded-lg border border-gray-100"
-    src="/images/tags/assign-multiple-tags.png"
-    alt="Assign multiple tags to a link"
-    width="500"
-    height="100"
-  />
-</Frame>
-
-The tags will show up in the link's details, and you can filter your links by these tags.
-
-<Frame>
-  <img
-    className="rounded-lg border border-gray-100"
-    src="/images/tags/multiple-tags-assigned.png"
-    alt="Multiple tags assigned to a link"
-    width="500"
-    height="100"
-  />
-</Frame>
-
-## How many tags can I create?
-
-The number of tags you can create depends on your plan:
-
-- **Free plan**: Up to 5 tags
-- **Pro plan**: Up to 25 tags
-- **Business plan**: Up to 150 tags
-- **Enterprise plan**: Unlimited tags
-
-Check out our [pricing page](https://affeasy.link/pricing) for more information on our plans.
+Use these insights to continually refine your targeting strategy and optimize your marketing campaigns for different regions.
 
 ## Need Help?
 
-If you have any questions about using tags or need assistance with any other features, please don't hesitate to [contact our support team](mailto:support@affeasy.link). We're here to help!
+If you have any questions about setting up geo targeting or using any of our advanced features, please don't hesitate to [contact our support team](mailto:support@affeasy.link). We're here to help you make the most of AffEasy's powerful link management tools!
