--- a/apps/docs/features/link-cloaking.mdx
+++ b/apps/docs/features/link-cloaking.mdx
@@ -1,173 +1,117 @@
 ---
 title: "Link Cloaking"
-"og:title": "Using Tags to Organize Links on AffEasy"
-description: "Learn more about what a 'Tag' is and how you can use it to better manage your links on AffEasy."
-icon: tag
+"og:title": "Mastering Link Cloaking on AffEasy"
+description: "Learn how to use link cloaking on AffEasy to mask your destination URL with your short link."
+icon: mask
 ---
 
-Tags are a powerful way to organize your links on AffEasy. You can use tags to group links together and make it easier to find them later.
+AffEasy's link cloaking feature allows you to mask your destination URL with your short link, providing a cleaner and more branded experience for your users.
+
+<Note>This feature is only available for **Pro plans and above**.</Note>
+
+## Why use link cloaking?
+
+Link cloaking offers several benefits:
+
+- Enhance brand visibility by displaying your custom domain
+- Maintain a consistent user experience across different links
+- Protect affiliate links from being stripped or replaced
+- Increase click-through rates with more trustworthy-looking links
+
+## How to enable link cloaking
+
+To use link cloaking for your AffEasy links, follow these steps:
+
+1. Open the **link builder** in your AffEasy dashboard.
+2. Enter your destination URL as usual.
+3. Toggle the "Link Cloaking" switch to enable the feature.
 
 <Frame>
   <img
     className="rounded-lg border border-gray-100"
-    src="/images/tags/tags-overview.png"
-    alt="Using tags to organize links on AffEasy"
+    src="/images/link-cloaking/link-cloaking-toggle.png"
+    alt="Toggling the 'Link Cloaking' switch in the link builder"
     width="600"
     height="400"
   />
 </Frame>
 
-## What is a Tag?
-
-A tag is a label that you can assign to a link. Tags are color-coded and can be created and assigned to a link in just a few clicks.
-
-With tags, you can:
-
-1. Organize your links by campaigns, clients, or any other categories you can think of.
-2. Filter your links by tags and get a shareable link to the filtered results.
-3. **Filter your analytics by tags** to see how your campaigns are performing.
-
-## How to create a Tag
-
-To create a tag, follow these steps:
-
-1. Navigate to the **Tags settings page** in your AffEasy workspace.
+Once enabled, your short link will be displayed in the user's browser address bar instead of the actual destination URL when they visit your link.
 
 <Frame>
   <img
     className="rounded-lg border border-gray-100"
-    src="/images/tags/tags-settings-page.png"
-    alt="Tags settings page"
+    src="/images/link-cloaking/link-cloaking-example.png"
+    alt="Masking 'example.com' with 'aff.easy/example'"
     width="600"
     height="400"
   />
 </Frame>
 
-2. Click on the "Create Tag" button to open the tag creation modal.
-3. Enter a name for your tag and choose a color.
+## Important considerations
 
-<Frame>
-  <img
-    className="rounded-lg border border-gray-100"
-    src="/images/tags/tag-creation-modal.png"
-    alt="Tag creation modal"
-    width="400"
-    height="300"
-  />
-</Frame>
+When using link cloaking, keep the following points in mind:
 
-You can also create new tags directly inside the **AffEasy link builder**:
+1. **HTTPS requirement**: For link cloaking to work properly, ensure your destination URL uses `https`. If your destination URL uses `http`, the browser will show a "Not Secure" warning, and link cloaking may not function correctly.
 
-1. After **creating a link**, click on the tag input field.
-2. Type in the name of the tag you want to create.
-3. If the tag doesn't exist, press `Enter ↩` to create a new tag.
+2. **Website compatibility**: Link cloaking might not work for certain websites that have security measures in place to prevent framing. These measures include:
+   - `X-Frame-Options` header set to `DENY`
+   - `Content-Security-Policy` header set to `frame-ancestors 'none'`
 
-<Frame>
-  <img
-    className="rounded-lg border border-gray-100"
-    src="/images/tags/create-tag-in-builder.png"
-    alt="Input the name of the tag you want to create (e.g. 'New Tag')"
-    width="500"
-    height="100"
-  />
-</Frame>
+<Note>
+  If link cloaking doesn't work for a particular destination, AffEasy will
+  automatically fall back to a standard redirect to ensure your links always
+  function.
+</Note>
 
-4. Click on the "Create Link" button to assign the tag to the link.
+## Advanced link cloaking with AffEasy
 
-## How to edit or delete a Tag
+AffEasy offers additional features to enhance your link cloaking experience:
 
-Tags can be managed via the **Tags settings page** in your AffEasy workspace.
+### Custom subdomains
 
-<Frame>
-  <img
-    className="rounded-lg border border-gray-100"
-    src="/images/tags/edit-tags-page.png"
-    alt="Editing tags in the Tags settings page"
-    width="600"
-    height="400"
-  />
-</Frame>
+With AffEasy Pro, you can set up custom subdomains for your short links. This allows you to use your own branded domain (e.g., `go.yourbrand.com`) instead of the default AffEasy domain.
 
-To manage a tag:
+To set up a custom subdomain:
 
-1. Click on the `⋮` button next to the tag to open the menu popover.
-2. Choose from the following options:
-   - Edit the tag
-   - Copy the tag's unique ID (for **programmatic API use**)
-   - Delete the tag
+1. Go to the **Domains** section in your AffEasy dashboard.
+2. Click on "Add Custom Domain" and follow the DNS setup instructions.
+3. Once verified, you can use your custom domain when creating cloaked links.
 
-<Frame>
-  <img
-    className="rounded-lg border border-gray-100"
-    src="/images/tags/tag-menu-popover.png"
-    alt="Edit a tag by clicking on the ⋮ icon"
-    width="300"
-    height="200"
-  />
-</Frame>
+### Link cloaking with the AffEasy API
 
-You can also use the following keyboard shortcuts to manage your tags:
+For developers and advanced users, AffEasy provides API access to create cloaked links programmatically. Here's an example of how to create a cloaked link using the AffEasy API:
 
-| Keyboard Shortcut | Action                   |
-| ----------------- | ------------------------ |
-| `E`               | Edit a tag               |
-| `I`               | Copy the tag's unique ID |
-| `X`               | Delete a tag             |
+```typescript
+import { AffEasy } from "affeasy";
 
-To edit a tag:
+const affeasy = new AffEasy();
 
-1. Click on the "Edit" button in the tag menu popover.
-2. In the tag editing modal, you can:
-   - Rename the tag
-   - Change the color of the tag
+await affeasy.links.create({
+  url: "https://example.com/long-url",
+  cloaking: true,
+  customDomain: "go.yourbrand.com", // optional
+});
+```
 
-<Frame>
-  <img
-    className="rounded-lg border border-gray-100"
-    src="/images/tags/tag-editing-modal.png"
-    alt="Tag editing modal"
-    width="400"
-    height="300"
-  />
-</Frame>
+## Combining link cloaking with other features
 
-## Can I assign multiple tags to a link?
+AffEasy allows you to combine link cloaking with other powerful features:
 
-Yes, you can. In the tags section for a given link, you can select multiple tags to assign to the link.
+- **Geo targeting**: Create cloaked links that redirect to different URLs based on the user's location.
+- **Device targeting**: Set up cloaked links that display different content depending on the user's device type.
+- **Password protection**: Add an extra layer of security to your cloaked links by requiring a password.
 
-<Frame>
-  <img
-    className="rounded-lg border border-gray-100"
-    src="/images/tags/assign-multiple-tags.png"
-    alt="Assign multiple tags to a link"
-    width="500"
-    height="100"
-  />
-</Frame>
+## Measuring the impact of link cloaking
 
-The tags will show up in the link's details, and you can filter your links by these tags.
+AffEasy provides detailed analytics to help you measure the effectiveness of your cloaked links. In your dashboard, you can view:
 
-<Frame>
-  <img
-    className="rounded-lg border border-gray-100"
-    src="/images/tags/multiple-tags-assigned.png"
-    alt="Multiple tags assigned to a link"
-    width="500"
-    height="100"
-  />
-</Frame>
+- Click-through rates for cloaked vs. non-cloaked links
+- Engagement metrics for cloaked links
+- Breakdown of traffic sources for cloaked links
 
-## How many tags can I create?
-
-The number of tags you can create depends on your plan:
-
-- **Free plan**: Up to 5 tags
-- **Pro plan**: Up to 25 tags
-- **Business plan**: Up to 150 tags
-- **Enterprise plan**: Unlimited tags
-
-Check out our [pricing page](https://affeasy.link/pricing) for more information on our plans.
+Use these insights to optimize your link strategy and improve your marketing campaigns.
 
 ## Need Help?
 
-If you have any questions about using tags or need assistance with any other features, please don't hesitate to [contact our support team](mailto:support@affeasy.link). We're here to help!
+If you have any questions about setting up link cloaking or using any of our advanced features, please don't hesitate to [contact our support team](mailto:support@affeasy.link). We're here to help you make the most of AffEasy's powerful link management tools!
