--- a/apps/docs/features/link-comments.mdx
+++ b/apps/docs/features/link-comments.mdx
@@ -1,173 +1,58 @@
 ---
 title: "Link Comments"
-"og:title": "Using Tags to Organize Links on AffEasy"
-description: "Learn more about what a 'Tag' is and how you can use it to better manage your links on AffEasy."
-icon: tag
+"og:title": "How to Add Comments to Your Links in AffEasy"
+description: "Learn how to add comments to your links in AffEasy to provide more context and improve team collaboration."
+icon: comment
 ---
 
-Tags are a powerful way to organize your links on AffEasy. You can use tags to group links together and make it easier to find them later.
+AffEasy allows you to add comments to your links, providing valuable context and enhancing team collaboration. This feature is especially useful for keeping track of link purposes, campaign details, or any other relevant information.
+
+## How to add comments to your links
+
+Adding comments to your links in AffEasy is a straightforward process:
+
+1. Open the **link builder** in your AffEasy dashboard.
+2. Toggle the "Comments" switch to reveal the comment field.
+3. Enter your comment in the text area that appears.
 
 <Frame>
   <img
     className="rounded-lg border border-gray-100"
-    src="/images/tags/tags-overview.png"
-    alt="Using tags to organize links on AffEasy"
+    src="/images/link-comments/add-comment-builder.png"
+    alt="Adding comments to your links in the AffEasy link builder"
     width="600"
     height="400"
   />
 </Frame>
 
-## What is a Tag?
+<Note>
+  Hyperlinks are supported in comments. You can use this feature to add more
+  context or link to related resources.
+</Note>
 
-A tag is a label that you can assign to a link. Tags are color-coded and can be created and assigned to a link in just a few clicks.
+## Viewing comments
 
-With tags, you can:
-
-1. Organize your links by campaigns, clients, or any other categories you can think of.
-2. Filter your links by tags and get a shareable link to the filtered results.
-3. **Filter your analytics by tags** to see how your campaigns are performing.
-
-## How to create a Tag
-
-To create a tag, follow these steps:
-
-1. Navigate to the **Tags settings page** in your AffEasy workspace.
+Once you've added a comment to a link, it will be visible to you and your team members as a message bubble on the link card in your AffEasy dashboard.
 
 <Frame>
   <img
     className="rounded-lg border border-gray-100"
-    src="/images/tags/tags-settings-page.png"
-    alt="Tags settings page"
+    src="/images/link-comments/comment-display.png"
+    alt="Comments are visible as message bubbles on the link card"
     width="600"
     height="400"
   />
 </Frame>
 
-2. Click on the "Create Tag" button to open the tag creation modal.
-3. Enter a name for your tag and choose a color.
+## Benefits of using link comments
 
-<Frame>
-  <img
-    className="rounded-lg border border-gray-100"
-    src="/images/tags/tag-creation-modal.png"
-    alt="Tag creation modal"
-    width="400"
-    height="300"
-  />
-</Frame>
+Adding comments to your links can significantly improve your link management process:
 
-You can also create new tags directly inside the **AffEasy link builder**:
-
-1. After **creating a link**, click on the tag input field.
-2. Type in the name of the tag you want to create.
-3. If the tag doesn't exist, press `Enter ↩` to create a new tag.
-
-<Frame>
-  <img
-    className="rounded-lg border border-gray-100"
-    src="/images/tags/create-tag-in-builder.png"
-    alt="Input the name of the tag you want to create (e.g. 'New Tag')"
-    width="500"
-    height="100"
-  />
-</Frame>
-
-4. Click on the "Create Link" button to assign the tag to the link.
-
-## How to edit or delete a Tag
-
-Tags can be managed via the **Tags settings page** in your AffEasy workspace.
-
-<Frame>
-  <img
-    className="rounded-lg border border-gray-100"
-    src="/images/tags/edit-tags-page.png"
-    alt="Editing tags in the Tags settings page"
-    width="600"
-    height="400"
-  />
-</Frame>
-
-To manage a tag:
-
-1. Click on the `⋮` button next to the tag to open the menu popover.
-2. Choose from the following options:
-   - Edit the tag
-   - Copy the tag's unique ID (for **programmatic API use**)
-   - Delete the tag
-
-<Frame>
-  <img
-    className="rounded-lg border border-gray-100"
-    src="/images/tags/tag-menu-popover.png"
-    alt="Edit a tag by clicking on the ⋮ icon"
-    width="300"
-    height="200"
-  />
-</Frame>
-
-You can also use the following keyboard shortcuts to manage your tags:
-
-| Keyboard Shortcut | Action                   |
-| ----------------- | ------------------------ |
-| `E`               | Edit a tag               |
-| `I`               | Copy the tag's unique ID |
-| `X`               | Delete a tag             |
-
-To edit a tag:
-
-1. Click on the "Edit" button in the tag menu popover.
-2. In the tag editing modal, you can:
-   - Rename the tag
-   - Change the color of the tag
-
-<Frame>
-  <img
-    className="rounded-lg border border-gray-100"
-    src="/images/tags/tag-editing-modal.png"
-    alt="Tag editing modal"
-    width="400"
-    height="300"
-  />
-</Frame>
-
-## Can I assign multiple tags to a link?
-
-Yes, you can. In the tags section for a given link, you can select multiple tags to assign to the link.
-
-<Frame>
-  <img
-    className="rounded-lg border border-gray-100"
-    src="/images/tags/assign-multiple-tags.png"
-    alt="Assign multiple tags to a link"
-    width="500"
-    height="100"
-  />
-</Frame>
-
-The tags will show up in the link's details, and you can filter your links by these tags.
-
-<Frame>
-  <img
-    className="rounded-lg border border-gray-100"
-    src="/images/tags/multiple-tags-assigned.png"
-    alt="Multiple tags assigned to a link"
-    width="500"
-    height="100"
-  />
-</Frame>
-
-## How many tags can I create?
-
-The number of tags you can create depends on your plan:
-
-- **Free plan**: Up to 5 tags
-- **Pro plan**: Up to 25 tags
-- **Business plan**: Up to 150 tags
-- **Enterprise plan**: Unlimited tags
-
-Check out our [pricing page](https://affeasy.link/pricing) for more information on our plans.
+1. **Provide context**: Explain the purpose of the link or add important details about its usage.
+2. **Improve team collaboration**: Share information about campaigns or strategies associated with specific links.
+3. **Track changes**: Use comments to log updates or modifications to link settings.
+4. **Enhance organization**: Categorize links or add tags within comments for easier searching and sorting.
 
 ## Need Help?
 
-If you have any questions about using tags or need assistance with any other features, please don't hesitate to [contact our support team](mailto:support@affeasy.link). We're here to help!
+If you have any questions about adding comments to your links or using any of our advanced features, please don't hesitate to [contact our support team](mailto:support@affeasy.link). We're here to help you make the most of AffEasy's powerful link management tools!
