--- a/apps/docs/features/password-protected-links.mdx
+++ b/apps/docs/features/password-protected-links.mdx
@@ -1,173 +1,150 @@
 ---
-title: "Password Protected Links"
-"og:title": "Using Tags to Organize Links on AffEasy"
-description: "Learn more about what a 'Tag' is and how you can use it to better manage your links on AffEasy."
-icon: tag
+title: "Password-Protected Links"
+"og:title": "How to Create Password-Protected Links on AffEasy"
+description: "Learn how to protect your short links with a password on AffEasy to prevent unauthorized access."
+icon: lock
 ---
 
-Tags are a powerful way to organize your links on AffEasy. You can use tags to group links together and make it easier to find them later.
+AffEasy's password protection feature allows you to secure your short links, ensuring that only authorized recipients can access the destination URL. This guide will walk you through the process of creating password-protected links on AffEasy.
+
+<Note>This feature is only available for **Pro plans and above**.</Note>
+
+## Step 1: Create a link
+
+1. Log into your AffEasy dashboard.
+2. Click on the **Create Link** button in the top right corner of the dashboard.
+3. Enter the destination URL and, if desired, a custom short link.
 
 <Frame>
   <img
     className="rounded-lg border border-gray-100"
-    src="/images/tags/tags-overview.png"
-    alt="Using tags to organize links on AffEasy"
+    src="/images/password-protection/create-link.png"
+    alt="Create a link with the AffEasy link builder"
     width="600"
     height="400"
   />
 </Frame>
 
-## What is a Tag?
+## Step 2: Set a password
 
-A tag is a label that you can assign to a link. Tags are color-coded and can be created and assigned to a link in just a few clicks.
-
-With tags, you can:
-
-1. Organize your links by campaigns, clients, or any other categories you can think of.
-2. Filter your links by tags and get a shareable link to the filtered results.
-3. **Filter your analytics by tags** to see how your campaigns are performing.
-
-## How to create a Tag
-
-To create a tag, follow these steps:
-
-1. Navigate to the **Tags settings page** in your AffEasy workspace.
+1. In the link builder, scroll down to the **Password Protection** section.
+2. Toggle the switch to enable password protection.
+3. Enter a password for the link.
 
 <Frame>
   <img
     className="rounded-lg border border-gray-100"
-    src="/images/tags/tags-settings-page.png"
-    alt="Tags settings page"
+    src="/images/password-protection/set-password.png"
+    alt="Entering a password for the link"
     width="600"
     height="400"
   />
 </Frame>
 
-2. Click on the "Create Tag" button to open the tag creation modal.
-3. Enter a name for your tag and choose a color.
+Once you've set a password, users who click on your link will be prompted to enter the password before accessing the destination URL.
 
 <Frame>
   <img
     className="rounded-lg border border-gray-100"
-    src="/images/tags/tag-creation-modal.png"
-    alt="Tag creation modal"
-    width="400"
-    height="300"
-  />
-</Frame>
-
-You can also create new tags directly inside the **AffEasy link builder**:
-
-1. After **creating a link**, click on the tag input field.
-2. Type in the name of the tag you want to create.
-3. If the tag doesn't exist, press `Enter ↩` to create a new tag.
-
-<Frame>
-  <img
-    className="rounded-lg border border-gray-100"
-    src="/images/tags/create-tag-in-builder.png"
-    alt="Input the name of the tag you want to create (e.g. 'New Tag')"
-    width="500"
-    height="100"
-  />
-</Frame>
-
-4. Click on the "Create Link" button to assign the tag to the link.
-
-## How to edit or delete a Tag
-
-Tags can be managed via the **Tags settings page** in your AffEasy workspace.
-
-<Frame>
-  <img
-    className="rounded-lg border border-gray-100"
-    src="/images/tags/edit-tags-page.png"
-    alt="Editing tags in the Tags settings page"
+    src="/images/password-protection/password-prompt.png"
+    alt="An example of a password-protected page"
     width="600"
     height="400"
   />
 </Frame>
 
-To manage a tag:
+## Step 3 (optional): Pass the password in the URL
 
-1. Click on the `⋮` button next to the tag to open the menu popover.
-2. Choose from the following options:
-   - Edit the tag
-   - Copy the tag's unique ID (for **programmatic API use**)
-   - Delete the tag
+For convenience, you can include the password as a query parameter in the URL. This allows automatic authentication and redirection to the destination URL.
 
-<Frame>
-  <img
-    className="rounded-lg border border-gray-100"
-    src="/images/tags/tag-menu-popover.png"
-    alt="Edit a tag by clicking on the ⋮ icon"
-    width="300"
-    height="200"
-  />
-</Frame>
+Example:
 
-You can also use the following keyboard shortcuts to manage your tags:
+- Password-protected link: **aff.easy/protected-link**
+- Link with password included as a query parameter: **aff.easy/protected-link?pw=secretpass**
 
-| Keyboard Shortcut | Action                   |
-| ----------------- | ------------------------ |
-| `E`               | Edit a tag               |
-| `I`               | Copy the tag's unique ID |
-| `X`               | Delete a tag             |
+<Note>
+  Be cautious when sharing links with embedded passwords, as they may be visible
+  in browser history or server logs.
+</Note>
 
-To edit a tag:
+## Step 4 (optional): Set a custom logo for the password page
 
-1. Click on the "Edit" button in the tag menu popover.
-2. In the tag editing modal, you can:
-   - Rename the tag
-   - Change the color of the tag
+For Pro plan users and above, you can customize the password page with your company's logo:
+
+1. Go to your workspace settings by clicking on **Settings** in the top menu bar of your AffEasy dashboard.
+2. Scroll to the **Workspace Logo** section.
+3. Upload your company's logo (a square image is recommended for best results).
 
 <Frame>
   <img
     className="rounded-lg border border-gray-100"
-    src="/images/tags/tag-editing-modal.png"
-    alt="Tag editing modal"
-    width="400"
-    height="300"
+    src="/images/password-protection/workspace-logo.png"
+    alt="Workspace Logo section"
+    width="600"
+    height="400"
   />
 </Frame>
 
-## Can I assign multiple tags to a link?
-
-Yes, you can. In the tags section for a given link, you can select multiple tags to assign to the link.
+Once set, your custom logo will automatically appear on the password page for all your protected links.
 
 <Frame>
   <img
     className="rounded-lg border border-gray-100"
-    src="/images/tags/assign-multiple-tags.png"
-    alt="Assign multiple tags to a link"
-    width="500"
-    height="100"
+    src="/images/password-protection/custom-logo-page.png"
+    alt="Password page with custom logo"
+    width="600"
+    height="400"
   />
 </Frame>
 
-The tags will show up in the link's details, and you can filter your links by these tags.
+## Advanced password protection features
 
-<Frame>
-  <img
-    className="rounded-lg border border-gray-100"
-    src="/images/tags/multiple-tags-assigned.png"
-    alt="Multiple tags assigned to a link"
-    width="500"
-    height="100"
-  />
-</Frame>
+AffEasy offers several advanced features to enhance your link security:
 
-## How many tags can I create?
+### Time-limited passwords
 
-The number of tags you can create depends on your plan:
+Set an expiration time for your passwords:
 
-- **Free plan**: Up to 5 tags
-- **Pro plan**: Up to 25 tags
-- **Business plan**: Up to 150 tags
-- **Enterprise plan**: Unlimited tags
+1. In the link builder, under Password Protection, enable "Time-limited Password".
+2. Set the duration for which the password will be valid.
 
-Check out our [pricing page](https://affeasy.link/pricing) for more information on our plans.
+This is useful for temporary access or time-sensitive content.
+
+### Multiple passwords
+
+Create multiple valid passwords for a single link:
+
+1. In the Password Protection section, click "Add Another Password".
+2. Enter additional passwords as needed.
+
+This allows you to provide different passwords to different groups or revoke access selectively.
+
+### Password protection with AffEasy API
+
+For developers and advanced users, AffEasy provides API access to create password-protected links programmatically. Here's an example:
+
+```typescript
+import { AffEasy } from "affeasy";
+
+const affeasy = new AffEasy();
+
+await affeasy.links.create({
+  url: "https://example.com/confidential",
+  password: "secretpass123",
+  customDomain: "go.yourbrand.com", // optional
+});
+```
+
+## Best practices for password-protected links
+
+To make the most of AffEasy's password protection feature:
+
+1. Use strong, unique passwords for each protected link.
+2. Avoid sharing password-embedded URLs in public or unsecured channels.
+3. Regularly update passwords for long-term protected links.
+4. Combine password protection with link expiration for time-sensitive content.
+5. Use custom logos to enhance brand recognition and user trust.
 
 ## Need Help?
 
-If you have any questions about using tags or need assistance with any other features, please don't hesitate to [contact our support team](mailto:support@affeasy.link). We're here to help!
+If you have any questions about creating password-protected links or using any of our advanced features, please don't hesitate to [contact our support team](mailto:support@affeasy.link). We're here to help you make the most of AffEasy's powerful link management tools!
