added two features to docs

--- a/apps/docs/features/custom-qr-codes.mdx
+++ b/apps/docs/features/custom-qr-codes.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Custom QR Codes"
 "og:title": "How to use Custom QR Codes with AffEasy"
-description: "Learn how to create and customize QR codes for your short links in AffEasy - available on Pro plans and above."
+description: "Learn how to create and customize QR codes for your short links in AffEasy"
 icon: qrcode
 ---
 
@@ -16,14 +16,14 @@ As a freemium product, we rely on word of mouth to spread the word about AffEasy
 <Frame>
   <img
     className="rounded-lg border border-gray-100"
-    src="/images/qr-codes/default-qr-code.png"
+    src="/images/features/default-qr-code.png"
     alt="Default QR Code on AffEasy"
     width="300"
-    height="300"
+    height="150"
   />
 </Frame>
 
-If you'd like to customize your QR codes or remove the AffEasy logo, please consider **upgrading to a Pro plan** to support us. Thank you!
+If you'd like to customize your QR codes or remove the AffEasy logo, please consider [upgrading to a Pro plan](/plans/pro-plan) to support us. Thank you!
 
 ## How to Set a Custom QR Code Logo
 
@@ -32,16 +32,27 @@ Once you're on a Pro plan or above, you can set a custom QR code for your short 
 To set a custom QR code, follow these steps:
 
 1. Navigate to your workspace settings page by clicking on the **Settings** link in the menu bar at the top of your workspace dashboard.
+
+<Frame>
+  <img
+    className="rounded-lg border border-gray-100"
+    src="/images/workspace/settings-tab.png"
+    alt="The Settings tab in your AffEasy workspace"
+    width="1200"
+    height="630"
+  />
+</Frame>
+
 2. Scroll down to the **Workspace Logo** section.
 3. Upload your company's logo. We recommend using a square image for the best results.
 
 <Frame>
   <img
     className="rounded-lg border border-gray-100"
-    src="/images/qr-codes/workspace-logo-section.png"
+    src="/images/features/workspace-logo-section.png"
     alt="Workspace Logo section"
-    width="600"
-    height="300"
+    width="1200"
+    height="630"
   />
 </Frame>
 
@@ -50,38 +61,12 @@ Once you've set your workspace's logo, your QR code will automatically update to
 <Frame>
   <img
     className="rounded-lg border border-gray-100"
-    src="/images/qr-codes/custom-qr-code.png"
+    src="/images/features/custom-qr-code.png"
     alt="Custom QR Code logo"
-    width="300"
+    width="1200"
     height="300"
   />
 </Frame>
-
-## Customizing QR Code Colors
-
-With a Pro plan or above, you can also customize the colors of your QR code to match your brand:
-
-1. Go to the QR Code section in your workspace settings.
-2. Use the color picker to choose your desired foreground and background colors.
-3. Preview your customized QR code in real-time.
-
-<Frame>
-  <img
-    className="rounded-lg border border-gray-100"
-    src="/images/qr-codes/qr-code-customization.png"
-    alt="QR Code Color Customization"
-    width="600"
-    height="300"
-  />
-</Frame>
-
-## Best Practices for QR Codes
-
-To ensure your QR codes are effective:
-
-1. **Maintain contrast**: Ensure there's enough contrast between the foreground and background colors for easy scanning.
-2. **Test thoroughly**: Always test your QR codes on various devices before publishing.
-3. **Provide context**: When displaying QR codes, include a brief description of where they lead.
 
 ## Need Help?
 
