--- a/apps/web/content/posts/why-open-source.mdx
+++ b/apps/web/content/posts/why-open-source.mdx
@@ -35,3 +35,8 @@ Despite these challenges, I remain committed to our open-source approach. I beli
 ## Join Us on the Open-Source Journey 🌟
 
 If you're a developer or a user interested in contributing to AffEasy, I welcome you to explore our GitHub repository and get involved. Together, we can shape the future of AffEasy and unlock the full potential of open-source software.
+
+<div style={{ textAlign: "right", fontStyle: "italic" }}>
+  Featured image: [Venture
+  Beat](https://venturebeat.com/business/its-actually-open-source-software-thats-eating-the-world/)
+</div>
